# langgraph-browser-agent

./: .gitignore  README.md  main.py  pyproject.toml
browser_agent/: graph.py  state.py
browser_agent/browser/: cascade.py  controller.py  driver.py  highlight.py  llm_client.py  snapshot.py
browser_agent/nodes/: answer.py  browser_skill.py  comparator.py  executor.py  extractor.py  planner.py  responder.py  vision.py
browser_agent/prompts/: templates.py
