[project]
name = "browser-agent"
version = "0.1.0"
description = "LangGraph + Playwright browser agent with Gemini + llava vision"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
]
